# SpatialReactor

./: .gitignore  CMakeLists.txt  README.md  mockup_bauhaus_stable_v1.html  release_notes.md  wireframe.html
.github/workflows/: build.yml
DesignReference/: SpatialReactor_GUI_v6_Agent_Prompt.md  spatial_reactor_ukrainian_bauhaus_v6.html
Docs/Architecture/: ArchitectureVerdict.md  Math.md  SignalFlow.md
Docs/Audit/: BaselineInventory.md
Docs/Release/: BuildInstructions.md  DAWCompatibility.md  FinalReport.md  KnownLimitations.md
Docs/Testing/: TestPlan.md  TestReport.md
Source/: CrashLogger.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/GUI/: CorrelationMeter.cpp  CorrelationMeter.h  FaceplateComponent.cpp  FaceplateComponent.h  GuiLayout.h  GuiTheme.h  ReactorCoreComponent.cpp  ReactorCoreComponent.h  ReadoutStrip.cpp  ReadoutStrip.h  SegmentedSelector.cpp  SegmentedSelector.h  SpatialRotaryKnob.cpp  SpatialRotaryKnob.h  TrustToggle.cpp  TrustToggle.h
Source/dsp/: AirEngine.h  CenterLock.h  ChannelBalanceGuard.h  ComplementarySpatialGenerator.h  CorrelationGovernor.h  DCBlocker.h  EnergyBudgetMixer.h  EnergyPreservingMS.h  HybridDecorrelator.h  LoudnessCompensator.h  MSMatrix.h  MacroMapper.h  NewAirEngine.h  NewCenterLock.h  NewCorrelationGovernor.h  NewSourceClassifier.h  NewTextureEngine.h  SourceClassifier.h  StereoAnalyzer.h  TextureEngine.h  TruePeakLimiter.h
Source/widgets/: BauhausButtonGroup.cpp  BauhausButtonGroup.h  BauhausCorrelationBar.cpp  BauhausCorrelationBar.h  BauhausRotaryKnob.cpp  BauhausRotaryKnob.h  BauhausSafeFreeToggle.cpp  BauhausSafeFreeToggle.h
tests/: HostileDAWTest.cpp  HostileDAWTest.h  audio_check.cpp  bare_minimal.cpp  cert_test.cpp  empty_test.cpp  main.cpp  minimal_test.cpp  raw_win32.cpp  seh_wrapper.c  ultra_minimal.cpp
tests/Baseline/: BaselineTests.cpp  DebugTrace.cpp  baseline_measurements.csv
